Revert "Expose dns via ingress"
This reverts commit 96fa5ffd684152640483d0a86ccec8204a8f9f9a.

Reason for revert: PRODX-3456

Change-Id: I71052fc517a3d9117cc72795e6c9640156414c76

--- a/tests/fixtures/network_policies/output/dns.yaml
+++ b/tests/fixtures/network_policies/output/dns.yaml
@@ -9,7 +9,7 @@ dns:designate:StatefulSet:designate-api:
         application: keystone
         component: client
   - podSelector:
-      matchLabels: &id001
+      matchLabels:
         application: ingress
         component: server
   - podSelector:
@@ -35,12 +35,3 @@ dns:designate:StatefulSet:designate-api:
   ports:
   - port: 9001
     protocol: TCP
-dns:designate:StatefulSet:designate-mdns:
-- from:
-  - podSelector:
-      matchLabels: *id001
-  ports:
-  - port: 53
-    protocol: TCP
-  - port: 53
-    protocol: UDP
