--- a/tests/fixtures/network_policies/output/dns.yaml
+++ b/tests/fixtures/network_policies/output/dns.yaml
@@ -13,7 +13,7 @@ dns:designate:StatefulSet:designate-api:
         application: keystone
         component: client
   - podSelector:
-      matchLabels:
+      matchLabels: &id001
         application: ingress
         component: server
   - podSelector:
@@ -39,3 +39,12 @@ dns:designate:StatefulSet:designate-api:
   ports:
   - port: 9001
     protocol: TCP
+dns:designate:StatefulSet:designate-mdns:
+- from:
+  - podSelector:
+      matchLabels: *id001
+  ports:
+  - port: 53
+    protocol: TCP
+  - port: 53
+    protocol: UDP
