--- a/tests/fixtures/render_service_template/output/ingress/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/ingress/ussuri_ceph_local_non_dvr.yaml
@@ -9,10 +9,15 @@ spec:
         ingress:
           nginx-status-ipv4-whitelist: 0.0.0.0/0
           client-header-buffer-size: 10k
-          bind-address: 127.0.0.1
+          bind-address: 0.0.0.0
           large-client-header-buffers: 4 16k
           ssl-redirect: "false"
           use-proxy-protocol: "true"
+        services:
+          tcp:
+            "53": openstack/designate-powerdns:53
+          udp:
+            "53": openstack/designate-powerdns:53
       endpoints:
         cluster_domain_suffix: cluster.local
         ingress:
