[virtual_lab] Add install script to deploy k8s and openstack
Related-Prod: PRODX-47105
Change-Id: Ia0bc4ccbc34b76cd318a5db23e505bdee13396be

--- a/virtual_lab/ansible/k0s-install.yaml
+++ b/virtual_lab/ansible/k0s-install.yaml
@@ -12,4 +12,4 @@
           controllers: "{{ groups.k8s_controllers[1:] }}"
           workers: "{{ groups.k8s_workers }}"
   roles:
-    - role: k0s
+    - role: bodsch.k0s
