--- a/virtual_lab/ansible/inventory/single_node.yaml
+++ b/virtual_lab/ansible/inventory/single_node.yaml
@@ -10,7 +10,8 @@ all:
 
   hosts:
     oc-virtual-lab-server-ctl-01:
-      ansible_host: 127.0.0.1
+      ansible_host: localhost
+      ansible_connection: local
 
   children:
     computes:
