[virtual_lab] Add waiter for osdpl
Related-Prod: PRODX-47199
Change-Id: I696c67f4c10143328dce65eb444577acf0c65ca7

--- a/virtual_lab/ansible/roles/oc/tasks/osdpl.yaml
+++ b/virtual_lab/ansible/roles/oc/tasks/osdpl.yaml
@@ -53,3 +53,19 @@
     state: present
     src: "{{oc_k8s_objects_path }}/osdpl.yaml"
   when: osdpl is changed
+
+- name: Install the latest jq
+  ansible.builtin.package:
+    name:
+      - jq
+    state: latest
+
+- name: Wait OpenStackDeployment is applied
+  environment:
+    KUBECONFIG: "{{ kubeconfig }}"
+    NAMESPACE: openstack
+    OSDPL_NAME: osh-dev
+  ansible.builtin.script: osdpl-wait.sh
+  tags:
+  - never
+  - wait
