Add manila sts backends support
By defining next structure, user can deploy statefulset based
backend for CephFS:

spec:
  features:
    manila:
      share:
        backends:
          cephfs_backend:
            type: statefulset
            values:
              conf:
                DEFAULT:
                  enabled_share_backends: cephfs_backend
                cephfs_backend:
                  share_backend_name: cephfs
                  share_driver: manila.share.drivers.cephfs.driver.CephFSDriver

In case CephFS driver is used default share type will be created with dhss set to
false as CephFS driver doesn't support it.

Change-Id: Id73d2124c47863f10bc8a57817a10c7af1add20c
Related-Prod: https://mirantis.jira.com/browse/PRODX-46720

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -1740,6 +1740,56 @@ properties:
                         then:
                           required:
                             - backup_share
+      manila:
+        type: object
+        additionalProperties: false
+        properties:
+          share:
+            type: object
+            additionalProperties: false
+            properties:
+              backends:
+                type: object
+                description: |
+                  Manila backends configuration
+                additionalProperties: False
+                patternProperties:
+                  ".*":
+                    description: |
+                      Backend name
+                    additionalProperties: False
+                    type: object
+                    required:
+                      - type
+                      - values
+                    properties:
+                      enabled:
+                        type: boolean
+                        description: |
+                          Enable Manila backend to deploy
+                          default: True
+                      type:
+                        type: string
+                        enum:
+                          - statefulset
+                      values:
+                        type: object
+                        additionalProperties: False
+                        required:
+                          - conf
+                        properties:
+                          conf:
+                            type: object
+                            additionalProperties: True
+                          images:
+                            type: object
+                            additionalProperties: True
+                          labels:
+                            type: object
+                            additionalProperties: True
+                          pod:
+                            type: object
+                            additionalProperties: True
       logging:
         type: object
         additionalProperties: false
