--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_telemetry/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_telemetry/context_template_args.yaml
@@ -483,6 +483,7 @@ instance-ha:
         username: testC7BY
   keystone_creds: {}
 shared-file-system:
+  is_ceph_enabled: false
   credentials: &credentials_shared-file-system
   - database:
       user:
