--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_tf_amphora/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_tf_amphora/context_template_args.yaml
@@ -410,6 +410,7 @@ baremetal:
       password: KBecvsPZsWBFzDqYnevHWArm7tFycZKr
       username: neutronLeRjiDsyT
 shared-file-system:
+  is_ceph_enabled: false
   credentials: &credentials_shared-file-system
   - database:
       user:
