--- a/tests/fixtures/render_service_template/input/antelope_ceph_local_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/antelope_ceph_local_non_dvr/context_template_args.yaml
@@ -414,6 +414,7 @@ baremetal:
       password: KBecvsPZsWBFzDqYnevHWArm7tFycZKr
       username: neutronLeRjiDsyT
 shared-file-system:
+  is_ceph_enabled: false
   credentials: &credentials_shared-file-system
   - database:
       user:
