--- a/tests/fixtures/render_service_template/input/yoga_lvm_lvm_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_lvm_lvm_non_dvr/context_template_args.yaml
@@ -415,6 +415,7 @@ baremetal:
       password: KBecvsPZsWBFzDqYnevHWArm7tFycZKr
       username: neutronLeRjiDsyT
 shared-file-system:
+  is_ceph_enabled: false
   credentials: &credentials_shared-file-system
   - database:
       user:
