[libvirt] Restart pod on /dev/kvm wrong permissions
Some system packages may change permissions for /dev/kvm
restart libvirt container to make sure they corrected.

Related-Prod: PRODX-47235
Change-Id: Ia945ef9e78374b5ee6061e5e1ce08329925bc571

--- a/charts/infra/libvirt/templates/configmap-bin.yaml
+++ b/charts/infra/libvirt/templates/configmap-bin.yaml
@@ -36,6 +36,8 @@ data:
   init-tls-certs.sh: |
 {{ tuple "bin/_init-tls-certs.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
 {{- end }}
+  health-probe.sh: |
+{{ tuple "bin/_health-probe.sh.tpl" . | include "helm-toolkit.utils.template" | indent 4 }}
 {{- include "helm-toolkit.snippets.values_template_renderer" (dict "envAll" $envAll "template" .Values.conf.dynamic_options.script "key" "init-dynamic-options.sh") | indent 2 }}
 {{- end }}
 {{- end }}
