[oc-virtual-lab] Deploy DNS for public endpoints
Related-Prod: PRODX-47249
Change-Id: I3d3c18d20a56be7f32ea5f6276f65a9cd3cdd3b7

--- a/virtual_lab/ansible/roles/oc/tasks/main.yaml
+++ b/virtual_lab/ansible/roles/oc/tasks/main.yaml
@@ -53,3 +53,16 @@
   tags:
   - oc_osdpl
   delegate_to: initial_controller
+
+- name: Include coredns tasks
+  ansible.builtin.include_tasks:
+    file: dns/coredns.yaml
+  tags:
+  - oc_dns
+  delegate_to: initial_controller
+
+- name: Include resolver tasks
+  ansible.builtin.include_tasks:
+    file: dns/resolver.yaml
+  tags:
+  - oc_dns
