--- a/virtual_lab/ansible/oc-install.yaml
+++ b/virtual_lab/ansible/oc-install.yaml
@@ -32,6 +32,9 @@
       set_fact:
         oc_controller_node: "{%- if ansible_hostname in groups.controllers %}True{%- endif %}"
         oc_compute_node: "{%- if ansible_hostname in groups.computes %}True{%- endif %}"
+        oc_resolved_ip_address: "{{ hostvars[groups.k8s_controllers[0]]['ansible_default_ipv4']['address'] }}"
+      tags:
+        - all
   tasks:
   - name: Initialize clients
     include_role:
@@ -59,3 +62,35 @@
       tasks_from: osdpl
     tags:
       - wait
+  - name: Prepare coredns configs
+    include_role:
+      name: oc
+      tasks_from: dns/coredns
+    tags:
+      - dns
+  - name: Setup coredns
+    include_role:
+      name: cloudalchemy.coredns
+    vars:
+      coredns_dns_port: 53
+      coredns_zone_files_paths:
+        - /src/coredns/it.just.works.db
+      coredns_config_file: /src/coredns/Corefile
+    tags:
+      - dns
+
+- name: Configure resolver
+  hosts: controllers:computes
+  become: true
+  become_user: root
+  pre_tasks:
+    - name: Set node role fact
+      set_fact:
+        oc_resolved_ip_address: "{{ hostvars[groups.k8s_controllers[0]]['ansible_default_ipv4']['address'] }}"
+  tasks:
+    - name: Setup dns resolver
+      include_role:
+        name: oc
+        tasks_from: dns/resolver
+  tags:
+    - dns
