--- a/virtual_lab/ansible/roles/oc/defaults/main.yaml
+++ b/virtual_lab/ansible/roles/oc/defaults/main.yaml
@@ -8,6 +8,7 @@ oc_k8s_node_labels:
 kubeconfig: "{{ inventory_dir }}/artifacts/k0s-kubeconfig.yml"
 oc_k8s_objects_path: /src/k8s
 oc_ca_certs_path: /src/ca
+oc_dns_coredns: /src/coredns
 oc_images_base_url: mirantis.azurecr.io
 oc_binary_base_url: https://binary.mirantis.com
 oc_clients_helm_release: v3.16.1
@@ -27,3 +28,7 @@ oc_image_tag: "0.17.2-79de3d7c"
 oc_repo: null
 oc_version: master
 oc_refspec: null
+oc_dns_resolver_ip_address: "{{ ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}"
+oc_dns_nameservers:
+  - 8.8.8.8
+  - 4.2.2.1
