[oc-virtual-lab] Route FIP network via 0 k8s controller
Related-Prod: PRODX-3456
Change-Id: Ic16d38ca894460676cc46a95f9c3d3ae4b6f85eb

--- a/virtual_lab/ansible/oc-install.yaml
+++ b/virtual_lab/ansible/oc-install.yaml
@@ -10,7 +10,7 @@
           - kubernetes
 
 - name: Setup infrastructure requirements
-  hosts: controllers:computes
+  hosts: k8s_controllers:controllers:computes
   become: true
   become_user: root
   pre_tasks:
@@ -18,6 +18,7 @@
       set_fact:
         oc_controller_node: "{%- if ansible_hostname in groups.controllers %}True{%- endif %}"
         oc_compute_node: "{%- if ansible_hostname in groups.computes %}True{%- endif %}"
+        oc_controller_node_main: "{%- if ansible_hostname in groups.k8s_controllers[0] %}True{%- endif %}"
     - name: Setup networking
       include_role:
         name: oc
