Increase libvirt keepalive timeouts
Related-Prod: PRODX-47269
Change-Id: If4f9360c30de987922502b095608a74085076a2d

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -217,8 +217,10 @@ spec:
 {%- else %}
           enabled: false
 {%- endif %}
-        {%- if libvirt_server_tls_enabled %}
         libvirt:
+          keepalive_count: 9
+          keepalive_interval: 10
+        {%- if libvirt_server_tls_enabled %}
           listen_tcp: "0"
           listen_tls: "1"
         tls:
