--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_ceph_non_dvr_rmq.yaml
@@ -127,6 +127,9 @@ spec:
         dynamic_options:
           libvirt:
             listen_interface: ens3
+        libvirt:
+          keepalive_count: 9
+          keepalive_interval: 10
       pod:
         probes:
           libvirt:
