--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
@@ -25,6 +25,8 @@ spec:
                 - "10.10.10.2:6789"
                 - "10.10.10.3:6789"
         libvirt:
+          keepalive_count: 9
+          keepalive_interval: 10
           listen_tcp: "0"
           listen_tls: "1"
         qemu:
