--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf.yaml
@@ -29,6 +29,9 @@ spec:
         dynamic_options:
           libvirt:
             listen_interface: vhost0
+        libvirt:
+          keepalive_count: 9
+          keepalive_interval: 10
       pod:
         probes:
           libvirt:
