Add health checks for image-precaching DaemonSet
Related-Prod: PRODX-46968
Change-Id: Ice7a66e7a2f0df8ff0f5ddb38e3f28c115894895

--- a/openstack_controller/templates/native/cache.yaml
+++ b/openstack_controller/templates/native/cache.yaml
@@ -38,6 +38,16 @@ spec:
         image: {{ url }}
 {# not all images support "/bin/sleep infinity" #}
         command: ["/bin/sleep", "86400000"]
+        livenessProbe:
+          exec:
+            command:
+              - "true"
+          periodSeconds: 3600
+        readinessProbe:
+          exec:
+            command:
+              - "true"
+          periodSeconds: 3600
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
